{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "86226e02-c8ff-4b95-b98f-278a4555652b",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "581f6b97-8eaf-4c3a-b32a-7808b1fe0bf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5627e5bd-1175-4c68-b88b-88c028fb192e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "45019808-7435-44d9-a219-188c9df9d34d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "60f0d4ed-2035-48e5-8c11-822099c73df6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Copy",
                    "type": "Button",
                    "id": "ddeb4269-2a24-47e2-902a-a4537a965be4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Paste",
                    "type": "Button",
                    "id": "98c9e942-df43-4b22-833e-71ebbcbdc493",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cut",
                    "type": "Button",
                    "id": "43bc75f2-baba-4911-b846-1526a87ea8e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "755eff5b-2c1f-4947-84bb-7688743d9b40",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "PassThrough",
                    "id": "6d7c2165-40fc-4dd8-86f2-6a017946ca3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "LeftRight",
                    "id": "066f5cb2-a25b-4f36-aaa1-417f2cc18a86",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5372be2a-7a04-42a3-8101-793fbdc2f6dd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "161e0b8f-a257-4329-9ccc-7a18f387dcb5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "43cba1d3-bda1-4455-beba-e285efa86d5b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "264444d2-e3b9-44e7-aeb7-604cbf17076c",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2e4ac59-ba20-41d5-8f80-150f83776417",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Copy",
                    "id": "b03c7097-fcc5-472c-916f-b6e9a0e6687e",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Copy",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e8b6f319-1d12-480f-a2c3-5c1b815575bd",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Copy",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "fa41b77d-e988-49f0-907a-ccba6353ffe3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Copy",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Paste",
                    "id": "ddec5406-c66b-4cfe-b408-4d0c2f7ac273",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paste",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6dbaa250-49b4-40b6-adf8-10d12555572d",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paste",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "2c12eaf8-4edd-4001-be10-2c6ad78c5018",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paste",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Cut",
                    "id": "a77e9694-7dec-4d2c-ab67-6c4ff94b5219",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cut",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "da316f15-36ae-4b51-9c28-7d16e7e93333",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cut",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "3c181671-b806-4823-b6ef-f5b770c94783",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cut",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dc95c77f-a984-41e1-9cea-a1fff54e424f",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Normalize(min=-1,max=1),Invert",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2328e922-a5e1-42f1-b964-c7d7579c6ebe",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}